assets/CSS/styles.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Macondo&display=swap');

/* CSS Variables */
:root {
    --primary-font: "Inter", sans-serif;
    --secondary-font: "Macondo", cursive;
    --primary-color: #3a2620; /* dark brown */
    --secondary-color: #aa9581; /* light brown */
    --highlight-color: #416a8e; /* blue */
    --highlight-color-light: #7a9fc2; /* light blue */
}

/* Global styles */

body {
    font-family: var(--primary-font);
}

h1,
h2,
h3 {
    font-family: var(--secondary-font);
    color: var(--primary-color);
}

h1,
h2 {
    text-transform: uppercase;
}

h2 {
    margin-bottom: 2rem;
}

.sub-heading-color {
    color: var(--highlight-color);
}

.section {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

/* Buttons */

.custom-button-filled {
    border: 2px solid var(--highlight-color);
    background-color: var(--highlight-color);
    color: white;
}

.custom-button-filled:hover {
    border: 2px solid var(--secondary-color);
    background-color: var(--secondary-color);
    color: white;
}

.custom-button-outline {
    border: 3px solid var(--highlight-color);
    padding: 7px 25px;
    color: var(--highlight-color)
}

.custom-button-outline:hover {
    background-color: var(--highlight-color);
    color: white
}

/* Navbar */

#navbar {
    background-color: var(--primary-color);
}

#navbar .logo {
    width: 30px;
}

/* Header */

#header .lead {
    font-family: var(--secondary-font);
}

/* Services */

#services .card-footer {
    font-weight: bold;
    color: var(--highlight-color);
    background-color: transparent;
}

#services .card {
    margin-bottom: 1.5rem;
}

/* Game library cards */

#new-games .card,
#fav-games .card {
    border: none;
}

/* Footer / contact */

#contact {
    background-color: var(--primary-color);
    color: white;
    padding-bottom: 3rem;
}

#contact h2 {
    color: white;
}

#contact .sub-heading-color {
    color: var(--highlight-color-light);
}

#contact a {
    color: var(--secondary-color);
    font-size: 1.2rem;
    margin-right: 15px;
}

#contact .social-links a {
    color: var(--highlight-color-light);
    font-size: 1.9rem;
    transition: color 0.3s ease-in-out;
}

#contact .social-links a:hover {
    color: var(--secondary-color);
}

#contact .table-dark * {
    background-color: transparent;
}

/* grid visualisation CSS for testing */

/* .container,
.row {
    border: 2px solid black;
}

.col-12 {
    border: 2px solid white;
    background-color: lightgray;
} */

/* Media queries */

/* Medium devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {
    /* Make all service cards the same height for consistency */
    #services .card-body {
        min-height: 191px;
    }
}

/* Large devices (small laptops, 992px and up) */
@media screen and (min-width: 992px) {
    /* Make all service cards the same height for consistency */
    #services .card-body {
        min-height: auto;
    }
}

/* xl devices (large desktops, 1200px and up) */
@media screen and (min-width: 1200px) {
    /* make all service cards the same height for consistency */
    #services .card-body {
        min-height: 220px;
    }
}

/* xxl devices (larger desktops, 1400px and up) */
@media screen and (min-width: 1400px) {
    /* make all service cards the same height for consistency */
    #services .card-body {
        min-height: 195px;
    }
}

